--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -3,14 +3,14 @@ version: '>= 0.14.0'
 formatter: markdown table
 
 content: |-
-  [![Tests](https://github.com/netascode/terraform-aci-scaffolding/actions/workflows/test.yml/badge.svg)](https://github.com/netascode/terraform-aci-scaffolding/actions/workflows/test.yml)
+  [![Tests](https://github.com/netascode/terraform-aci-remote-location/actions/workflows/test.yml/badge.svg)](https://github.com/netascode/terraform-aci-remote-location/actions/workflows/test.yml)
 
-  # Terraform ACI Scaffolding Module
+  # Terraform ACI Remote Location Module
 
-  Description
+  Manages ACI Remote Location
 
   Location in GUI:
-  `Tenants` » `XXX`
+  `Admin` » `Import/Export` » `Remote Locations`
 
   ## Examples
 
